security/mtls-strict.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-prod
  namespace: frontend-prod
spec:
  mtls:
    mode: STRICT
